client/src/scss/components/_header.scss
@use '../abstracts' as *;

header {
	background-color: $theme_color_header;
	color: $theme_color_phrase_font;
	box-shadow: $bs_deep;
	padding: 15px;
	// padding-bottom: 10px;
	// display: flex;
	// align-items: center;
	// justify-content: space-between;
	// padding: 15px;
	// list-style-type: none;
	// box-shadow: $bs_deep;
	// // position: fixed;
	// // height: 160px;
	// right: 0;
	// left: 0;
	// z-index: 100;
	// top: 0;
	// // margin-top: 22px;
	// width: 100%;
}

.header {
	display: flex;
	align-items: center;
	justify-content: space-between;

	list-style-type: none;
	right: 0;
	left: 0;
	z-index: 100;
	top: 0;
	// margin-top: 22px;
	width: 100%;
}
.dropdown-nav:hover .nav-dropdown {
	display: flex;
	flex-direction: column;
}

.nav-dropdown {
	background: linear-gradient(180deg, $theme_color_header 0%, $theme_color_primary 100%);
	position: absolute;
	display: none;
	left: 0;
	width: 100%;
	padding: 1rem;
	list-style-type: none;
	z-index: 1;
	background-color: $theme_color_header_dropdown;
	margin: 0;
	// box-shadow: $bs_deep;
}
.nav-dropdown-subcategory-content {
	// display: none;
	white-space: nowrap;
	overflow: hidden;
	left: 0;
	max-width: 0px;
	width: 100%;
	list-style-type: none;
	z-index: 1;
	margin: 0;
	// max-width: 250px;
	transition: all .5s;
}

.show-dropdown {
	// display: block !important;
	max-width: 250px;
	transition: all .5s;
}

.nav-dropdown-nested-content {
	display: flex;
	flex-direction: column;
	white-space: nowrap;
	overflow: hidden;
	left: 0;
	max-width: 0px;
	width: 100%;
	list-style-type: none;
	z-index: 1;
	margin: 0;
	// max-width: 250px;
	transition: all .5s;
}
.show-dropdown-nested {
	// display: block !important;
	max-width: 250px;
	transition: all .5s;
}

.nav-btn-link {
	display: inline-block;
	background-color: transparent;
	box-shadow: unset;
	color: $theme_color_phrase_font;
	border: 0px;
	font-family: $paragraph_font;
	border-radius: 1rem 0rem 0rem 1rem;
	transition: all .5s ease;
	padding: 10px;
	text-align: left;
	width: 100%;
}

.nav-btn-link:hover {
	// color: $theme_color_primary;
	box-shadow: $bs_deep;
	background-color: gray;
}

.nav-btn-dropdown {
	background-color: $theme_color_primary;
	color: $theme_color_phrase_font;
	border: 0px;
	font-family: $paragraph_font;
	border-radius: 1rem 1rem 0rem 0rem;
	transition: all .5s ease;
	padding: 10px;
	transform: rotate(90deg);
	height: 20%;
	width: 45px;
}

.nav-btn-dropdown:hover {
	box-shadow: $bs_deep;
	background-color: $theme_color_primary_hover;
}

.nav-btn-container {
	display: flex;
	// justify-content: space-between;
	width: 100%;
}

.hide-menu {
	// display: block !important;
	max-height: 1500px !important;
}

.nav-column {
	width: 100%;
	max-width: 250px;
	transition: all .5s ease;
}

.gradient-btn {
	// background: linear-gradient(90deg, #83d8ff, #faa9d7, #fff6a1, #80cef1);
	// background: -webkit-linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
	background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;

	// border-color: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
	background-size: 200%;
	// -webkit-text-stroke: 1px white !important;
	font-size: 18px;
	text-align: center;
	// letter-spacing: 6px;
	font-family: $paragraph_font;
	// font-family: "special_font";
	// transition: all 2s ease;
}

.gradient-btn:hover {
	// background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
	// background-size: 200%;
	animation: animate 4s linear infinite;
}

@keyframes animate {
	0% {
		background-position: 0%;
	}
	100% {
		background-position: 400%;
	}
}

.gradient-btn {
	span {
		display: block;
		display: inline-block;
	}
}

